# py-rust-gdextension-cookiecutter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tasks.py  versioning.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: setup-git-identity.ps1  setup-git-identity.sh
src/py_rust_gdextension_cookiecutter/: __init__.py  cli.py  git.py  naming.py  prompts.py  render.py
src/py_rust_gdextension_cookiecutter/template/: cookiecutter.json
src/py_rust_gdextension_cookiecutter/template/hooks/: post_gen_project.py  pre_gen_project.py
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/: .editorconfig  .gitattributes  .gitconfig.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/.githooks/: pre-commit
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/.github/: CODEOWNERS  pull_request_template.md
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/.github/workflows/: release.yml  rust.yml
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/docs/: architecture.md  ci.md  description.md  godot.md
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/examples/{{cookiecutter.project_slug}}_cli/: Cargo.toml
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/examples/{{cookiecutter.project_slug}}_cli/src/: main.rs
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/examples/{{cookiecutter.project_slug}}_visualizer/: Cargo.toml
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/examples/{{cookiecutter.project_slug}}_visualizer/src/: main.rs
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/extensions/{{cookiecutter.gd_crate_name}}/: Cargo.toml
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/extensions/{{cookiecutter.gd_crate_name}}/src/: lib.rs
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/godot/: project.godot  {{cookiecutter.project_slug}}.gdextension  {{cookiecutter.project_slug}}.gdextension.uid
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/godot/demo/: main.gd  main.gd.uid  main.tscn
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/packaging/godot-addon/: README.md  {{cookiecutter.project_slug}}.gdextension
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/scripts/: README.md
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/scripts/github-protection/: apply.sh
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/scripts/linux/: bump-version.sh  ci-check.sh  package-godot-release.sh  setup-bevy-deps.sh  setup-branch-protection.sh  setup-git-hooks.sh  sync-version.sh
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/scripts/windows/: bump-version.cmd  bump-version.ps1  ci-check.cmd  ci-check.ps1  setup-branch-protection.cmd  setup-branch-protection.ps1  setup-git-hooks.cmd  setup-git-hooks.ps1  sync-version.cmd  sync-version.ps1  version-lib.ps1
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/src/: core.rs  error.rs  lib.rs
src/py_rust_gdextension_cookiecutter/template/{{cookiecutter.repo_name}}/tests/: integration.rs
tests/: conftest.py  test_git.py  test_naming.py  test_render.py  test_versioning.py
