[package]
name = "{{ cookiecutter.project_slug }}_cli"
version.workspace = true
edition = "2024"
publish = false
description = "CLI demo for {{ cookiecutter.project_slug }}"
{% if cookiecutter.has_remote_license == "yes" %}
license-file.workspace = true
{% endif %}

[[bin]]
name = "{{ cookiecutter.project_slug }}_cli"
path = "src/main.rs"

[dependencies]
{{ cookiecutter.project_slug }} = { path = "../.." }
