[package]
name = "{{ cookiecutter.project_slug }}_visualizer"
version.workspace = true
edition = "2024"
publish = false
description = "Bevy visualizer for {{ cookiecutter.project_slug }}"
{% if cookiecutter.has_remote_license == "yes" %}
license.workspace = true
license-file = "../../{{ cookiecutter.license_file }}"
{% endif %}

[[bin]]
name = "{{ cookiecutter.project_slug }}_visualizer"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.16", default-features = true, features = ["bevy_ui"] }
{{ cookiecutter.project_slug }} = { path = "../.." }
